# disaster-response-intelligence-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
assets/: README.md
configs/: synthetic_lab.yaml
data/: README.md
docs/: methodology.md  report_template.md  response_policy.md  synthetic_lab.md
matlab/: plot_disaster_timeseries.m
notebooks/: 01_synthetic_disaster_lab.ipynb
scripts/: run_synthetic_disaster_lab.py
src/disasterintel/: __init__.py  alerts.py  config.py  exposure.py  ledger.py  reporting.py  resources.py  routes.py  synthetic.py  visualization.py
tests/: test_alerts_ledger.py  test_demo_pipeline.py  test_exposure_resources.py  test_synthetic.py
