[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-response-intelligence-platform"
version = "0.1.0"
description = "Synthetic-first climate and disaster response intelligence platform for hazard exposure, resource planning, and emergency coordination research"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
